--- a/app/src/main/res/layout/activity_nuevo_plato.xml
+++ b/app/src/main/res/layout/activity_nuevo_plato.xml
@@ -1,65 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFC107"
+    android:gravity="start"
+    android:orientation="vertical"
+    android:paddingStart="@dimen/space_small"
+    android:paddingEnd="@dimen/space_small">
 
     <TextView
-        android:id="@+id/txtNuevoPlato"
+        android:id="@+id/textNewPlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/laberNuevoPlato"
-        android:padding="20dp"
-        android:textSize="25dp"/>
+        android:layout_marginBottom="@dimen/space_large"
+        android:text="@string/labelNewPlate"
+        android:textSize="25sp" />
 
     <EditText
-        android:id="@+id/textTitulo"
+        android:id="@+id/textTitlePlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/labelTituloPlato"
-        android:inputType="text"
-        android:padding="5dp"/>
+        android:layout_marginBottom="@dimen/space_large"
+        android:ems="10"
+        android:hint="@string/labelTitlePlate"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
     <EditText
-        android:id="@+id/textDescripcion"
+        android:id="@+id/textDescriptionPlate"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_large"
         android:gravity="fill_horizontal"
-        android:hint="@string/labelDescripcion"
-        android:padding="5dp" />
+        android:hint="@string/labelDescription"
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
     <LinearLayout
         android:id="@+id/layout2"
         android:layout_width="match_parent"
-        android:layout_height="51dp"
-        android:orientation="horizontal"
-        >
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_large"
+        android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/textPrecio"
-            android:layout_width="139dp"
+            android:id="@+id/textPricePlate"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/labelPrecio"
+            android:hint="@string/labelPrice"
             android:importantForAutofill="no"
-            android:inputType="number"/>
+            android:inputType="number|numberDecimal" />
 
         <EditText
-            android:id="@+id/textCategorias"
-            android:layout_width="133dp"
+            android:id="@+id/textCaloriesPlate"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="@string/labelCalorias"
+            android:hint="@string/labelCalories"
             android:importantForAutofill="no"
-            android:inputType="number"
-            android:maxLength="3"   />
+            android:inputType="number" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSave"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btnGuardar" />
+        android:text="@string/btnSave" />
 
 
 </LinearLayout>
