--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -4,18 +4,16 @@
     <item
         android:id="@+id/menuOption1"
         android:orderInCategory="1"
-        android:title="Registrarme"
+        android:title="@string/menuRegister"
         app:showAsAction="never" />
     <item
         android:id="@+id/menuOption2"
-        android:title="Crear Ítem"
         android:orderInCategory="2"
-        app:showAsAction="never"
-        />
+        android:title="@string/menuCreateItem"
+        app:showAsAction="never" />
     <item
         android:id="@+id/menuOption3"
-        android:title="Lista de Ítems"
         android:orderInCategory="2"
-        app:showAsAction="never"
-        />
+        android:title="@string/menuItemsList"
+        app:showAsAction="never" />
 </menu>
