Se agregó toolbar en lista de platos y se creo una nueva interfaz de usuario (sin validaciones ni funcionalidades)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
 
         <RadioButton
             android:id="@+id/radioButtonDebit"
-            android:layout_width="match_parent"
+            android:layout_width="195dp"
             android:layout_height="match_parent"
             android:text="@string/labelRadioButtonDebit" />
 
