--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical"
     android:paddingStart="@dimen/space_small"
     android:paddingEnd="@dimen/space_small">
+    <TextView
+        android:id="@+id/textNewPlate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_large"
+        android:text="@string/labelNuevoPedido"
+        android:textSize="25sp" />
     <EditText
         android:id="@+id/textEmailAddress"
         android:layout_width="match_parent"
@@ -45,7 +52,7 @@
         />
 
     <Button
-        android:id="@+id/buttonAddPlate"
+        android:id="@+id/btnAddPlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btnAddPlate" />
