--- a/app/src/main/res/layout/fila_plato.xml
+++ b/app/src/main/res/layout/fila_plato.xml
@@ -69,7 +69,16 @@
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/btnVer" />
+                android:text="@string/btnVer"
+                android:visibility="visible" />
+
+            <Button
+                android:id="@+id/btnAsk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="@string/btnAsk"
+                android:visibility="gone" />
         </LinearLayout>
 
     </LinearLayout>
