Reordenamiento y renombramiento de las clases

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingStart="@dimen/space_small"
     android:paddingEnd="@dimen/space_small"
-    tools:context=".RegistrarUsuario">
+    tools:context=".activity.ActivityRegistrarUsuario">
 
     <EditText
         android:id="@+id/textUserName"
