--- a/app/src/main/res/layout/activity_plate_recycler.xml
+++ b/app/src/main/res/layout/activity_plate_recycler.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:paddingStart="@dimen/space_small"
     android:paddingEnd="@dimen/space_small"
-    tools:context=".PlateLogic.PlateRecyclerActivity">
+    tools:context=".activity.ActivityPlateRecycler">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarPlateRecycler"
