--- a/app/src/main/res/layout/activity_nuevo_plato.xml
+++ b/app/src/main/res/layout/activity_nuevo_plato.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107"
+    android:background="@color/colorPrimary"
     android:gravity="start"
     android:orientation="vertical"
     android:paddingStart="@dimen/space_small"
