--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFC107"
+    android:background="@color/colorPrimary"
     android:gravity="start"
     android:orientation="vertical"
     android:paddingStart="@dimen/space_small"
@@ -74,5 +74,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonAskPlate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/textAceptAsk" />
 
 </LinearLayout>
