--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFC107</color>
-    <color name="colorPrimaryDark">#FF5722</color>
+    <color name="colorPrimary">#C0C7C2</color>
+    <color name="colorPrimaryDark">#6A7dA0</color>
     <color name="colorAccent">#3F51B5</color>
 </resources>
