--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="space_large">16dp</dimen>
     <dimen name="space_small">8dp</dimen>
+
+    <dimen name="corner_radius">15dp</dimen>
+    <dimen name="card_elevation">5dp</dimen>
 </resources>
