--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -43,13 +43,13 @@
     </RadioGroup>
 
     <EditText
-        android:id="@+id/textAdress"
+        android:id="@+id/textAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/adress"
-        />
+        android:hint="@string/address"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/btnAddPlate"
@@ -57,22 +57,28 @@
         android:layout_height="wrap_content"
         android:text="@string/btnAddPlate" />
 
+    <ListView
+        android:id="@+id/listPlates"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textTitlePlate"
+            android:id="@+id/labelTotalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:text="@string/labelTotalPrice" />
 
         <TextView
-            android:id="@+id/textPricePlate"
+            android:id="@+id/textTotalPrice"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <Button
