--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -60,13 +60,14 @@
     <ListView
         android:id="@+id/listPlates"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="385dp"
+        android:nestedScrollingEnabled="true">
 
     </ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:orientation="horizontal">
 
         <TextView
