--- a/app/src/main/res/layout/activity_plate_recycler.xml
+++ b/app/src/main/res/layout/activity_plate_recycler.xml
@@ -23,5 +23,5 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFC107" />
+        android:background="#9AD9E1" />
 </RelativeLayout>
