--- a/app/src/main/res/layout/fila_plato.xml
+++ b/app/src/main/res/layout/fila_plato.xml
@@ -26,27 +26,28 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="363dp"
+                android:layout_height="239dp"
                 android:adjustViewBounds="false"
+                android:contentDescription="TODO"
                 android:cropToPadding="false"
                 android:scaleType="fitStart"
-                app:srcCompat="@drawable/tortilla" />
-
-            <TextView
-                android:id="@+id/textTitlePlate"
-                style="@style/Base.Widget.MaterialComponents.TextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center"
-                android:foregroundTint="#FFFFFF"
-                android:selectAllOnFocus="false"
-                android:textAllCaps="false"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                app:srcCompat="@drawable/hamburguesa1" />
 
         </FrameLayout>
+
+        <TextView
+            android:id="@+id/textTitlePlate"
+            style="@style/Base.Widget.MaterialComponents.TextView"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:foregroundTint="#FFFFFF"
+            android:selectAllOnFocus="false"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="#000000"
+            android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,7 +64,7 @@
 
             <Space
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="23dp"
                 android:layout_weight="1" />
 
             <Button
