--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -8,11 +8,12 @@
     android:orientation="vertical"
     android:paddingStart="@dimen/space_small"
     android:paddingEnd="@dimen/space_small">
+
     <TextView
         android:id="@+id/textNewPlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/space_large"
+        android:layout_marginBottom="@dimen/space_small"
         android:text="@string/labelNuevoPedido"
         android:textSize="25sp" />
     <EditText
@@ -56,20 +57,26 @@
         android:id="@+id/btnAddPlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_small"
         android:text="@string/btnAddPlate" />
 
     <ListView
         android:id="@+id/listPlates"
         android:layout_width="match_parent"
         android:layout_height="385dp"
-        android:nestedScrollingEnabled="true">
+        android:background="@drawable/border_background"
+        android:nestedScrollingEnabled="true"
+        android:paddingStart="@dimen/space_for_border_background"
+        android:paddingEnd="@dimen/space_for_border_background">
 
     </ListView>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="@dimen/space_small"
+        android:paddingBottom="@dimen/space_small">
 
         <TextView
             android:id="@+id/labelTotalPrice"
@@ -79,34 +86,33 @@
 
         <TextView
             android:id="@+id/textTotalPrice"
-            android:layout_width="320dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="32dp"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/space_small">
 
         <TextView
             android:id="@+id/labelCantidadProductos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="@string/lblcantidadproductos"
             tools:text="Cantidad productos: " />
 
         <TextView
             android:id="@+id/textCantidadProductos"
-            android:layout_width="264dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonAskPlate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/textAceptAsk" />
+        android:text="@string/textRealizarPedido" />
 
 </LinearLayout>
