--- a/app/src/main/res/layout/activity_plate_recycler.xml
+++ b/app/src/main/res/layout/activity_plate_recycler.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
-        android:elevation="4dp"
+        android:elevation="@dimen/card_elevation"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
