faltan que funcione je

--- a/app/src/main/res/layout/activity_nuevo_plato.xml
+++ b/app/src/main/res/layout/activity_nuevo_plato.xml
@@ -71,5 +71,12 @@
         android:layout_height="wrap_content"
         android:text="@string/btnSave" />
 
+    <Button
+        android:id="@+id/btnPrueba"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="PROBAR BASE MAN" />
+
 
 </LinearLayout>
