--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".activity.ActivityHome">
+    tools:context="app.activity.ActivityHome">
 
     <LinearLayout
         android:layout_width="match_parent"
