Se agregó de seleccionar ubicación (por defecto)

--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -119,6 +119,12 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/buttonAddLocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btnAddLocation" />
+
+        <Button
             android:id="@+id/buttonAskPlate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
