--- a/app/src/main/res/layout/fila_plato.xml
+++ b/app/src/main/res/layout/fila_plato.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardViewPlate"
+    android:id="@+id/cardViewPlato"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -25,7 +25,7 @@
             android:layout_gravity="bottom|center">
 
             <ImageView
-                android:id="@+id/imagePlate"
+                android:id="@+id/imagePlato"
                 android:layout_width="363dp"
                 android:layout_height="239dp"
                 android:adjustViewBounds="false"
@@ -36,7 +36,7 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/textTitlePlate"
+            android:id="@+id/textTituloPlato"
             style="@style/Base.Widget.MaterialComponents.TextView"
             android:layout_width="350dp"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textPricePlate"
+                android:id="@+id/textPrecioPlato"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
