--- a/app/src/main/res/layout/activity_nuevo_plato.xml
+++ b/app/src/main/res/layout/activity_nuevo_plato.xml
@@ -18,7 +18,7 @@
         android:textSize="25sp" />
 
     <EditText
-        android:id="@+id/textTitlePlate"
+        android:id="@+id/textTituloPlato"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/space_large"
@@ -28,7 +28,7 @@
         android:inputType="text" />
 
     <EditText
-        android:id="@+id/textDescriptionPlate"
+        android:id="@+id/textDescripcionPlato"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/space_large"
@@ -45,7 +45,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/textPricePlate"
+            android:id="@+id/textPrecioPlato"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,7 +55,7 @@
             android:inputType="number|numberDecimal" />
 
         <EditText
-            android:id="@+id/textCaloriesPlate"
+            android:id="@+id/textCaloriasPlato"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -72,7 +72,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/btnCamera"
+            android:id="@+id/btnCamara"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,7 +80,7 @@
             app:srcCompat="@android:drawable/ic_menu_camera" />
 
         <ImageButton
-            android:id="@+id/btnGallery"
+            android:id="@+id/btnGalleria"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
             app:srcCompat="@android:drawable/ic_menu_gallery" />
 
         <ImageButton
-            android:id="@+id/btnDeleteImage"
+            android:id="@+id/btnBorrarImagen"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -97,7 +97,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageUpload"
+        android:id="@+id/imagenPlato"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
