--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -22,14 +22,13 @@
             android:textSize="25sp" />
 
         <EditText
-            android:id="@+id/textEmailAddress"
+            android:id="@+id/textEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/labelEmail"
             android:importantForAutofill="no"
-            android:inputType="textEmailAddress"
-            android:text="fulanito@gmail.com" />
+            android:inputType="textEmailAddress" />
 
         <RadioGroup
             android:id="@+id/radioGroupTypeCard"
@@ -38,13 +37,13 @@
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/radioButtonEnvio"
+                android:id="@+id/rbEnvio"
                 android:layout_width="189dp"
                 android:layout_height="match_parent"
                 android:text="@string/labelSend" />
 
             <RadioButton
-                android:id="@+id/radioButtonTakeAway"
+                android:id="@+id/rbParaLLevar"
                 android:layout_width="205dp"
                 android:layout_height="match_parent"
                 android:checked="true"
@@ -52,24 +51,23 @@
         </RadioGroup>
 
         <EditText
-            android:id="@+id/textAddress"
+            android:id="@+id/textDireccion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/address"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            android:text="direccio n 999" />
+            android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/btnAddPlate"
+            android:id="@+id/btnAddPlato"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/space_small"
             android:text="@string/btnAddPlate" />
 
         <ListView
-            android:id="@+id/listPlates"
+            android:id="@+id/listaPlatos"
             android:layout_width="match_parent"
             android:layout_height="385dp"
             android:background="@drawable/border_background"
@@ -93,7 +91,7 @@
                 android:text="@string/labelTotalPrice" />
 
             <TextView
-                android:id="@+id/textTotalPrice"
+                android:id="@+id/textPrecioTotal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -119,13 +117,13 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/buttonAddLocation"
+            android:id="@+id/btnAddUbicacion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/btnAddLocation" />
 
         <Button
-            android:id="@+id/buttonAskPlate"
+            android:id="@+id/btnConfirmarPedido"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/textRealizarPedido" />
