--- a/app/src/main/res/layout/activity_registrar_usuario.xml
+++ b/app/src/main/res/layout/activity_registrar_usuario.xml
@@ -38,7 +38,7 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/textEmailAddress"
+        android:id="@+id/textEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
