--- a/app/src/main/res/layout/fila_plato.xml
+++ b/app/src/main/res/layout/fila_plato.xml
@@ -30,23 +30,23 @@
                 android:layout_height="239dp"
                 android:adjustViewBounds="false"
                 android:cropToPadding="false"
-                android:scaleType="fitStart"
-                app:srcCompat="@drawable/hamburguesa1" />
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/sendmeal" />
+
+            <TextView
+                android:id="@+id/textTituloPlato"
+                style="@style/Base.Widget.MaterialComponents.TextView"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:foregroundTint="#FFFFFF"
+                android:selectAllOnFocus="false"
+                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#000000"
+                android:textSize="30sp" />
 
         </FrameLayout>
-
-        <TextView
-            android:id="@+id/textTituloPlato"
-            style="@style/Base.Widget.MaterialComponents.TextView"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:foregroundTint="#FFFFFF"
-            android:selectAllOnFocus="false"
-            android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#000000"
-            android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
